# Q-pick

./: .gitignore  config.py  main.py  requirements.txt
detector/: pyproject.toml
detector/detector.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
detector/models/: base.py  detection.py  factory.py  grounding_dino.py  sam2_detector.py
do_3_razy_sztuka/: __init__.py  main.py
do_3_razy_sztuka/models/: __init__.py  embedder.py  matcher.py  reference_db.py
do_3_razy_sztuka/pipeline/: __init__.py  decision_engine.py  product_localizer.py
do_3_razy_sztuka/utils/: __init__.py  logger.py  visualization.py
groundingdino/: __init__.py
